--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "run_prettier": "prettier --write src"
+        "run_prettier": "prettier --write src",
+        "watch-server": "yarn json-server --watch ./db.json --port=3001"
     },
     "eslintConfig": {
         "extends": [
@@ -44,6 +45,7 @@
         ]
     },
     "devDependencies": {
-        "prettier": "2.5.0"
+        "prettier": "2.5.0",
+        "json-server": "^0.17.0"
     }
 }
